2019-09-26  Siddhesh Poyarekar  <siddhesh@gotplt.org>

	* scripts/vcs_to_changelog/misc_util.py (decode): Remove latin1
	from codecs.

2019-09-25  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* rt/Makefile (CFLAGS-clock_nanosleep.c): Move to ...
	* time/Makefile (CFLAGS-clock_nanosleep.c): ... here.

	* sysdeps/unix/sysv/linux/Makefile
	(CFLAGS-tst-sigcontextinfo-get_pc.c): Rename to
	CFLAGS-tst-sigcontext-get_pc.c.

2019-09-24  Alistair Francis  <alistair.francis@wdc.com>
    
	* inet/net-internal.h: Fix uninitalised clntudp_call() variable.

2019-09-24  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/arm/sysdep.h
	(HAVE_CLOCK_GETTIME_VSYSCALL): Define to "__vdso_clock_gettime",
	not "__vdso_gettimeofday".
	(HAVE_GETTIMEOFDAY_VSYSCALL): Define to "__vdso_gettimeofday", not
	"__vdso_clock_gettime".
	* sysdeps/unix/sysv/linux/mips/sysdep.h
	(HAVE_CLOCK_GETTIME_VSYSCALL): Define to "__vdso_clock_gettime",
	not "__vdso_gettimeofday".
	(HAVE_GETTIMEOFDAY_VSYSCALL): Define to "__vdso_gettimeofday", not
	"__vdso_clock_gettime".

2019-09-19  Paul A. Clarke  <pc@us.ibm.com>

	* sysdeps/powerpc/fpu/fenv_libc.h (fegetenv_and_set_rn): New.
	(__fe_mffscrn): New.
	* sysdeps/powerpc/fpu/fenv_private.h (libc_feholdsetround_ppc_ctx):
	Do not clear enable bits, remove obsolete code, use
	fegetenv_and_set_rn.
	(libc_feresetround_ppc): Remove obsolete code, use
	fegetenv_and_set_rn.

2019-09-19  Stefan Liebler  <stli@linux.ibm.com>

	* support/support_ptrace.c: Remove inclusion of sys/prctl.h.

2019-09-19  Stefan Liebler  <stli@linux.ibm.com>

	* sysdeps/s390/hp-timing.h (_HP_TIMING_H): Undefine.
	(_HP_TIMING_S390_H): Define.

2019-09-18  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/syscall-names.list: Update kernel
	version to 5.3.
	(clone3): New syscall.
	(pidfd_open): Likewise.

	* scripts/build-many-glibcs.py (Context.checkout): Default Linux
	version to 5.3.

2019-09-18  Stefan Liebler  <stli@linux.ibm.com>
